# python_django

./: .env.template  Dockerfile  docker-compose.yaml  orders.csv  pyproject.toml  requirements.txt
mysite/: devices.csv  log.txt  log.txt.1  log.txt.2  requirements.txt  shopapp-products-fixtures.json
mysite/blogapp/: admin.py  models.py  sitemap.py  urls.py  views.py
mysite/blogapp/migrations/: 0001_initial.py  0002_rename_content_article_body_remove_article_author_and_more.py
mysite/blogapp/templates/blogapp/: article_detail.html  base.html  (+1 more)
mysite/myapiapp/: views.py
mysite/myauth/: admin.py  models.py  tests.py  urls.py  views.py
mysite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py
mysite/mysite/: settings.py  urls.py
mysite/requestdataapp/: forms.py  middlewares.py  urls.py  views.py
mysite/shopapp/: admin.py  admin_mixins.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: orders-fixture.json  products-fixture.json
mysite/shopapp/migrations/: 0001_initial.py  0002_product_created_at_product_discount_product_price.py  0003_product_archived.py  0004_order.py  0005_order_user.py  0006_order_products.py  0007_alter_product_options.py  0008_alter_order_promocode.py  0009_product_created_by.py  0010_remove_product_created_by_product_profile.py  0011_rename_profile_product_created_by.py  0012_alter_product_created_by.py  0013_order_receipt.py  0014_product_preview.py  0015_productimage.py  0016_alter_order_options_alter_product_options.py  0017_alter_product_description_alter_product_name.py
(+36 files in other folders)
