[tool.poetry]
name = "python-django"
version = "0.1.0"
description = ""
authors = ["Владимир Подзоров <podzorof@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
django-rest-framework = "^0.1.0"
django = "^4.2.1"
djangorestframework = "^3.14.0"
django-filter = "^23.2"
django-debug-toolbar = "^4.1.0"
pillow = "^10.0.0"
gunicorn = "^20.1.0"
drf-spectacular = "^0.26.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
